--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "type": "module",
     "scripts": {
         "dev": "node --watch src/app.js",
+        "start": "node src/app.js",
         "test": "mocha test/supertest.test.js"
     },
     "keywords": [],
@@ -15,6 +16,7 @@
         "@faker-js/faker": "^9.0.3",
         "bcrypt": "^5.1.0",
         "cookie-parser": "^1.4.6",
+        "dotenv": "^16.4.7",
         "express": "^4.18.2",
         "jsonwebtoken": "^9.0.2",
         "mongoose": "^6.7.5",
