--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "scripts": {
         "dev": "node --watch src/app.js",
         "start": "node src/app.js",
-        "test": "mocha test/supertest.test.js"
+        "test": "mocha tests/**/*.test.js"
     },
     "keywords": [],
     "author": "",
